# Pi-Pico_FrequencyCounter

./: LICENSE  README.md
src/: CMakeLists.txt  freq-simple.c
src/I2C_LCD/: LiquidCrystal_I2C.c  LiquidCrystal_I2C.h
